<resources>
    <string name="app_name">Tweeter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="person">person</string>
</resources>