<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_zoom_in_24"
        android:title="@string/Search" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_person_pin_24"
        android:title="@string/person"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/inboxFragment"
        android:icon="@drawable/baseline_markunread_24"
        android:title="@string/inbox"/>

</menu>